edited some bugs  at status code
